created section two out of six in the landing page. added responsiveness

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,6 @@
 
 @layer components {
   .text-gradient {
-    @apply text-transparent bg-clip-text bg-gradient-to-br from-primary to-secondary leading-loose;
+    @apply text-transparent bg-clip-text bg-gradient-to-br from-primary to-secondary;
   }
 }
